fix metadata detail catalogs align

--- a/discovery-frontend/src/assets/css/metatron/page.css
+++ b/discovery-frontend/src/assets/css/metatron/page.css
@@ -6267,6 +6267,7 @@ table.ddp-table-detail.ddp-mgt20 {margin-top:20px;}
 table.ddp-table-detail tbody tr > th,
 table.ddp-table-detail tbody tr > td {padding:7px 0; vertical-align: top; font-weight:normal;}
 table.ddp-table-detail tbody tr th {color:#91969e; font-size:13px; text-align:left;}
+table.ddp-table-detail tbody tr th.type-line-height {line-height:30px;}
 table.ddp-table-detail tbody tr th .ddp-wrap-hover-info {display:inline-block; position:relative; cursor:pointer;}
 table.ddp-table-detail tbody tr th .ddp-wrap-hover-info .ddp-icon-info3 {display:inline-block; width:11px; height:11px; background:url(../../images/icon_que.png) no-repeat; background-position:left -12px;}
 table.ddp-table-detail tbody tr th .ddp-wrap-hover-info .ddp-box-layout4 {display:none; position:absolute; bottom:-30px; left:100%; margin-left:5px;width:350px;}
@@ -9962,7 +9963,8 @@ table.ddp-table-detail tr td .ddp-bar span {display:inline-block; height:100%; b
 .ddp-box-catalogs a.ddp-btn-delete {display:none; position:absolute; top:50%; right:11px; margin-top:-7px; content:''; width:14px; height:14px; background:url(../../images/btn_sclose.png) no-repeat; background-position:-15px -131px;}
 .ddp-box-catalogs:hover .ddp-btn-delete {display:block;}
 
-.ddp-wrap-catalogs2 {margin:-7px 0;}
+.ddp-wrap-catalogs2 {margin:-7px 0 0 0;}
+.ddp-wrap-catalogs2 + .ddp-apply.type-catalog {margin-top:6px !important;}
 .ddp-wrap-catalogs2 .ddp-ui-catalogs2 {padding:7px 0 7px 20px; color:#4b515b;}
 .ddp-wrap-catalogs2 .ddp-ui-catalogs2 .ddp-catalogs-in {display:inline-block;
 	cursor:pointer;}
